...
                    ),
                  ),
                  Flexible(
                    flex: 1,
                    child: TextButton(
                      child: Text(
                        widget.auth.currentUser == null ? 'Log In' : 'Log Out',
                        style: TextStyle(color: Colors.grey[100], fontSize: 18),
                      ),
                      onPressed: () {
                        if (widget.auth.currentUser == null) {
                          Navigator.pushNamedAndRemoveUntil(context, '/login', (_) => false);
                        } else {
...
